project/java-shareit/infra/k8s/service-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: shareit-gateway
  namespace: shareit
spec:
  selector:
    app: shareit-gateway
  ports:
    - port: 8080
      targetPort: 8080
