project/java-shareit/infra/k8s/service-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: shareit-server
  namespace: shareit
spec:
  selector:
    app: shareit-server
  ports:
    - port: 9090
      targetPort: 9090
