project/java-shareit/infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shareit
  namespace: shareit
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: shareit.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shareit-gateway
                port:
                  number: 8080
